--- a/app/src/main/res/layout/activity_gamebuttons.xml
+++ b/app/src/main/res/layout/activity_gamebuttons.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.GameActivity"
+    tools:context=".activities.GameButtonsActivity"
     android:background="#6ED371">
 
         <androidx.appcompat.widget.LinearLayoutCompat
