--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#6ED371"
-    android:layout_centerVertical="true"
-    android:layout_centerHorizontal="true">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_centerHorizontal="true"
-        >
-        <EditText
-            android:id="@+id/main_EDT_playerName"
+    android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/main_IMG_backGround"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="match_parent"
             android:background="@color/white"
-            android:textColorHint="@color/black"
-            android:text="Your name"
-            android:textSize="60dp"
-            android:layout_marginBottom="100dp"
-            android:layout_gravity="center"
-            android:textEditPasteWindowLayout="@color/black"/>
+            android:scaleType="centerCrop"
+            android:layout_centerInParent="true"/>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/main_BTN_play"
-            android:layout_width="300dp"
-            android:layout_height="100dp"
-            android:layout_marginEnd="40dp"
-            android:backgroundTint="#0F8013"
-            android:text="Play"
-            android:textAlignment="center"
-            android:textSize="60dp"
-            app:cornerRadius="20dp"
-            app:icon="@drawable/ic_play"
-            app:iconSize="75dp"
-            app:iconTint="@android:color/transparent"
-            app:iconTintMode="add"
-            android:layout_marginBottom="100dp" />
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:textColor="#F5F5F5"
+            android:textSize="35sp"
+            android:text="Hunting In Space"
+            android:fontFamily="serif"
+            android:layout_marginVertical="40dp"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"/>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/main_BTN_topTen"
-            android:layout_width="400dp"
-            android:layout_height="100dp"
-            android:layout_marginEnd="40dp"
-            android:backgroundTint="#0F8013"
-            android:text="Top Ten"
-            android:textAlignment="textStart"
-            android:textSize="60dp"
-            app:icon="@drawable/ic_top_ten"
-            app:iconSize="70dp"
-            app:iconTint="@android:color/transparent"
-            app:iconTintMode="add"/>
 
-    </LinearLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:hint="Your name"
+            android:gravity="center"
+            android:textColorHint="#F5F5F5"
+            app:endIconMode="clear_text"
+            app:endIconTint="#F5F5F5"
+            app:hintTextColor="#F5F5F5"
+            android:layout_centerInParent="true"
+            app:cornerRadius="20dp">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/main_EDT_playerName"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:fontFamily="serif"
+                android:textSize="30dp"
+                android:background="#40EFEBEA"
+                android:textColor="#F5F5F5"
+                android:drawableStart="@drawable/ic_baseline_person_add_alt_1_30"
+                android:drawableTint="@color/white"
+                android:drawablePadding="10dp"/>
 
-</RelativeLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/main_BTN_play"
+                android:layout_width="300dp"
+                android:layout_height="100dp"
+                android:backgroundTint="@android:color/transparent"
+                android:text="Play"
+                android:fontFamily="serif"
+                android:textSize="60dp"
+                android:textStyle="bold"
+                android:textColor="#F5F5F5"
+                app:cornerRadius="20dp"
+                app:icon="@drawable/ic_play"
+                app:iconSize="70dp"
+                app:iconTint="@android:color/transparent"
+                app:iconTintMode="add"
+                android:layout_marginBottom="20dp"
+                />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/main_BTN_topTen"
+                android:layout_width="400dp"
+                android:layout_height="100dp"
+                android:backgroundTint="@android:color/transparent"
+                android:text="Top Ten"
+                android:textStyle="bold"
+                android:fontFamily="serif"
+                android:textAlignment="textStart"
+                android:textSize="55dp"
+                android:textColor="#F5F5F5"
+                app:icon="@drawable/ic_top_ten"
+                app:iconSize="70dp"
+                app:iconTint="@android:color/transparent"
+                app:iconTintMode="add"/>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
