--- a/app/src/main/res/layout/activity_topten.xml
+++ b/app/src/main/res/layout/activity_topten.xml
@@ -7,6 +7,13 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/topten_IMG_backGround"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:scaleType="centerCrop"
+        android:layout_centerInParent="true"/>
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
