--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="24dp"
             android:textColor="#F5F5F5"
             android:textSize="35sp"
-            android:text="Hunting In Space"
+            android:text="Crypto In Space"
             android:fontFamily="serif"
             android:layout_marginVertical="40dp"
             android:textStyle="bold"
