Several arrangement changes and more clean code. Added description to functions, added validation to user name input, create MySignal class for toast message and vibration, create class for set the background in all the activities, now user cant go to Top Ten list if there is no user in the list and cant get in the list if he has 0 score.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,9 @@
             app:endIconTint="#F5F5F5"
             app:hintTextColor="#F5F5F5"
             android:layout_centerInParent="true"
-            app:cornerRadius="20dp">
+            app:cornerRadius="20dp"
+            app:errorEnabled="true"
+            app:errorTextColor="@android:color/holo_red_light">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/main_EDT_playerName"
                 android:layout_width="300dp"
